# BabelTower

./: .gitignore  LICENSE  README.md  README_zhTW.md  myAPP_macOS.spec  myAPP_windows.spec  pyproject.toml
app/macos/: Babel_Tower_macOS.icns  config_handler.py  google_credentials.py  main.py  settings.py
app/windows/: config_handler.py  google_credentials.py  main.py  settings.py
html/: scrollToTopButton.js  style.css  sub-google-api.html  webpage.html
html/css/: main.css  sub-shortcut.css
